demo-app/tkit.yaml
apiVersion: "v1"
kind: "DeploymentConfig"
metadata:
  name: tkit
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: tkit
        version: v1
        appGroup: kubis
    spec:
      containers:
      - name: "tkit"
        image: "docker.io/dimssss/tkit:0.1"
        command: ["/bin/bash", "-c", "sleep 9999999"]
  replicas: 1
  triggers:
  - type: ConfigChange
  strategy:
    type: Rolling
