demo-app/RULES.YAML
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: chuck-api
  namespace: chuck
spec:
  host: chuck-api
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chuck-api
  namespace: "chuck"
spec:
  hosts:
  - chuck-api
  http:
  - route:
    - destination:
        host: chuck-api
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: chuck-ui
  namespace: chuck
spec:
  host: chuck-ui
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chuck-ui
  namespace: "chuck"
spec:
  hosts:
  - chuck-ui
  http:
  - route:
    - destination:
        host: chuck-ui
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mysql-db
  namespace: chuck
spec:
  host: mysql-db
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mysql-db
  namespace: "chuck"
spec:
  hosts:
  - mysql-db
  tcp:
  - match:
    - port: 3306
    route:
    - destination:
        host: mysql-db
        port:
          number: 3306
