demo-app/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: "chuck-api"
  namespace: chuck
spec:
  selector:
    app: "chuck-api"
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: chuck-api
  namespace: chuck
spec:
  host: chuck-api.apps.none-3bf4.open.redhat.com
  port:
    targetPort: http
  to:
    kind: Service
    name: chuck-api
---
apiVersion: v1
kind: Service
metadata:
  name: "chuck-ui"
  namespace: chuck
spec:
  selector:
    app: "chuck-ui"
  type: NodePort
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    nodePort: 30080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: chuck-ui
  namespace: chuck
spec:
  host: chuck-ui.apps.none-3bf4.open.redhat.com
  port:
    targetPort: http
  to:
    kind: Service
    name: chuck-ui
---
kind: DeploymentConfig
apiVersion: "v1"
metadata:
  labels:
    app: "chuck-ui"
  name: "chuck-ui"
  namespace: chuck
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: "chuck-ui"
        version: v1
    spec:
      containers:
      - name: "chuck-ui"
        image: "docker.io/dimssss/chuck-ui:latest"
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
kind: DeploymentConfig
apiVersion: "v1"
metadata:
  labels:
    app: "chuck-api"
  name: "chuck-api"
  namespace: chuck
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: "chuck-api"
        version: v1
    spec:
      containers:
      - name: "chuck-api"
        image: "docker.io/dimssss/chuck-api:latest"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: chuck-api
  namespace: chuck
spec:
  host: chuck-api
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chuck-api
  namespace: "chuck"
spec:
  hosts:
  - chuck-api
  http:
  - route:
    - destination:
        host: chuck-api
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: chuck-ui
  namespace: chuck
spec:
  host: chuck-ui
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chuck-ui
  namespace: "chuck"
spec:
  hosts:
  - chuck-ui
  http:
  - route:
    - destination:
        host: chuck-ui
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mysql-db
  namespace: chuck
spec:
  host: mysql-db
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mysql-db
  namespace: "chuck"
spec:
  hosts:
  - mysql-db
  tcp:
  - match:
    - port: 3306
    route:
    - destination:
        host: mysql-db
        port:
          number: 3306
