demo-app/b-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: "chuck-api"
  namespace: chuck
spec:
  selector:
    app: "chuck-api"
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: chuck-api
  namespace: chuck
spec:
  tls:
    termination: edge
  # host: chuck-api.devinfra-b.resource.bank
  port:
    targetPort: http
  to:
    kind: Service
    name: chuck-api
---
apiVersion: v1
kind: Service
metadata:
  name: "chuck-ui"
  namespace: chuck
spec:
  selector:
    app: "chuck-ui"
  ports:
  - name: http
    port: 3000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: chuck-ui
  namespace: chuck
spec:
  tls:
    termination: edge
  # host: chuck-ui.devinfra-b.resource.bank
  port:
    targetPort: http
  to:
    kind: Service
    name: chuck-ui
---
kind: DeploymentConfig
apiVersion: "v1"
metadata:
  labels:
    app: "chuck-ui"
  name: "chuck-ui"
  namespace: chuck
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: "chuck-ui"
        version: v1
    spec:
      containers:
      - name: "chuck-ui"
        image: "docker.io/dimssss/chuck-ui:latest"
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
kind: DeploymentConfig
apiVersion: "v1"
metadata:
  labels:
    app: "chuck-api"
  name: "chuck-api"
  namespace: chuck
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: "chuck-api"
        version: v1
    spec:
      containers:
      - name: "chuck-api"
        image: "docker.io/dimssss/chuck-api:latest"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
kind: DeploymentConfig
apiVersion: "v1"
metadata:
  labels:
    app: "chuck-db"
  name: "chuck-db"
  namespace: chuck
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: "chuck-db"
        version: v1
    spec:
      containers:
      - name: "chuck-db"
        image: "registry.redhat.io/rhscl/mysql-57-rhel7"
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: "chuck-db"
  namespace: chuck
spec:
  selector:
    app: "chuck-db"
  ports:
  - name: mysql
    port: 3306
